2004-07-02  Jim Evins  <evins@snaught.com>

	* data/glabels.1:
		Created man page.  Based on page submitted by Matthew J. Lockner, however
		it has been severely edited.
	
	* data/avery-other-templates.xml
	* data/misc-other-templates.xml:
		Started new files for predefined templates with non-standard sheet sizes.
		These have been initially populated with the Avery 06141 and
		OfficeMax #86112, both provided by Matthew J. Lockner.
	
	* data/Makefile.am:
		Install above manpage and template files.
	
	* glabels.spec.in:
		Make sure we install man pages.
	
	* src/glabels-batch.c:
		Changed short form of help option to '-?' to be consistent with glabels.
	
	* AUTHORS:
		Added acknowledgement for above labels.

2004-07-02  Jim Evins  <evins@snaught.com>

	* src/glabels.c: (main), (save_session_cb):
		- Now include libbonoboui.h, recent.h, and file.h to provide missing
		  prototypes.
		- save_session_cb() now returns gboolean.
		- Minor formatting changes.

	* src/window.h:
	* src/window.c:
		- Now include file.h to provide missing prototype.
		- gl_window_get_type() now returns GType, not guint.  I believe this may
		  ultimately be cause of the segfault reported in Bug #982287, since
		  GType is actually a gulong, which may not be compatible on other
		  architectures (64bit) -- I cannot personally test this at this time.
		  I was sloppy in several other xxx_get_type() functions which also
		  returned guint -- see next group of files:
	
	* src/window.c: (gl_window_get_type):
	* src/canvas-hacktext.c: (gl_canvas_hacktext_get_type):
	* src/canvas-hacktext.h:
	* src/hig.c: (gl_hig_alert_get_type), (gl_hig_dialog_get_type),
	(gl_hig_category_get_type), (gl_hig_vbox_get_type),
	(gl_hig_hbox_get_type):
	* src/hig.h:
	* src/label-barcode.c: (gl_label_barcode_get_type):
	* src/label-barcode.h:
	* src/label-box.c: (gl_label_box_get_type):
	* src/label-box.h:
	* src/label-ellipse.c: (gl_label_ellipse_get_type):
	* src/label-ellipse.h: